--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: I Congreso Nacional sobre Documentación y Arqueometría del Arte Rupestr
 {% haml important_dates.haml %}
 {% haml fees_separator.haml %}
 {% haml fees.haml %}
-<!-- {% haml programme_separator.haml %}
-{% haml programme.haml %} -->
+{% haml programme_separator.haml %}
+{% haml programme.haml %}
 {% haml keynote_separator.haml %}
 {% haml keynote.haml %}
 {% haml vlc_separator.haml %}
